# wotbreplay-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config
.github/workflows/: check.yaml  publish.yaml
benches/: data.rs
replays/: 20221203_player_results.wotbreplay  20230429_1682194799_malinovka.wotbreplay  20230512_2150__helaas_pindakaas_R159_SU_130PM_15146680594634860.wotbreplay  20230802_2133__helaas_pindakaas_S31_Strv_K_15193856522497923.wotbreplay  20230802_2136__helaas_pindakaas_Oth38_50TP_Tyszkiewicza_S1_15188303129784363.wotbreplay  training_room.wotbreplay
src/: error.rs  lib.rs  models.rs  prelude.rs  replay.rs  result.rs
src/models/: battle_results.rs  battle_results_dat.rs  data.rs  map_id.rs  meta.rs  room_type.rs
src/models/data/: base_player_create.rs  entity_method.rs  packet.rs  payload.rs  replay_header.rs  subtype_2f.rs  summary.rs  type_0.rs  update_arena.rs
src/models/data/entity_method/: update_arena.rs
tests/: battle_results.rs  data.rs  meta.rs
tests/replays/: .gitattributes  20221202_2259__zeekrab_It20_Car_Comb_45t_2308705958773814583.wotbreplay  20230429_0126__helaas_pindakaas_A140_ASTRON_REX_105_16114615898101270.wotbreplay  20230503_0027__helaas_pindakaas_A140_ASTRON_REX_105_2319058483532631656.wotbreplay  victory_points.wotbreplay  winning_team.wotbreplay
