[package]
name = "wotbreplay-parser"
description = "World of Tanks Blitz replay parser"
version = "0.0.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eigenein/wotbreplay-parser"
license = "MIT"
keywords = ["world-of-tanks-blitz", "replay", "parser", "wargaming", "results"]
categories = ["parsing"]

[features]
default = []

[dependencies]
prost = "0.11.3"
serde = { version = "1.0.148", features = ["derive"] }
serde_bytes = "0.11.7"
serde-pickle = "1.1.1"
thiserror = "1.0.37"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
anyhow = "1.0.66"
