[package]
name = "wotbreplay-parser"
description = "World of Tanks Blitz replay parser"
version = "0.0.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eigenein/wotbreplay-parser"
license = "MIT"
keywords = ["world-of-tanks-blitz", "replay", "parser", "wargaming", "results"]
categories = ["parsing"]

[features]
default = []
meta = ["dep:serde_json"]

[dependencies]
byteorder = "1.4.3"
prost = "0.11.3"
serde = { version = "1.0.148", features = ["derive"] }
serde_bytes = "0.11.7"
serde-pickle = "1.1.1"
serde_json = { version = "1.0.96", optional = true }
thiserror = "1.0.37"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
anyhow = "1.0.66"
