[package]
name = "wotbreplay-parser"
description = "World of Tanks Blitz replay parser"
version = "0.0.0"
edition = "2021"
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
readme = "README.md"
repository = "https://github.com/eigenein/wotbreplay-parser"
license = "MIT"
keywords = ["world-of-tanks-blitz", "replay", "parser", "wargaming", "results"]
categories = ["parsing"]

[features]
default = []
meta = ["dep:serde_json"] # `meta.json` parsing
raw-payload = [] # save raw packet payloads, enabling increases memory usage and decreases performance

[dependencies]
bytes = "1.4.0"
byteorder = "1.4.3"
prost = "0.11.3"
serde = { version = "1.0.148", features = ["derive"] }
serde_bytes = "0.11.7"
serde-pickle = "1.1.1"
serde_json = { version = "1.0.96", optional = true }
serde_repr = "0.1.12"
serde_with = { version = "2.3.3", features = ["hex"] }
thiserror = "1.0.37"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }

[dev-dependencies]
anyhow = "1.0.66"
criterion = "0.4.0"

[[bench]]
name = "data"
harness = false
